--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -4,27 +4,27 @@
   display: none;
 }
 
-body #wall #tag-2 { /* 201 */
+#wall #tag-2 {
   display: none;
 }
 
 
-div#wall div#tag-3.slick, .wicked{ /*222*/
+#wall #tag-3.slick, .wicked{
   display: none;
 }
 
 
-#wall .parent #tag-4 { /* 210 */
+#wall .parent #tag-4 {
   display: none;
 }
 
 
-div#wall div.parent div#tag-5.slick { /*223*/
+div#wall div.parent div#tag-5.slick {
   display: none;
 }
 
 
-body div#wall div.parent div:last-child div#tag-6 { /*225*/
+body div#wall div.parent div:last-child div#tag-6 {
   display: none;
 }
 
