--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -9,7 +9,7 @@ body #wall #tag-2 {
 }
 
 
-div#wall div#tag-3.slick, .wicked{
+#wall #tag-3.slick, .wicked{
   display: none;
 }
 
@@ -19,15 +19,16 @@ div#wall div#tag-3.slick, .wicked{
 }
 
 
-div#wall div.parent div#tag-5.slick {
+#wall .parent #tag-5.slick {
   display: none;
 }
 
 
-body div#wall div.parent div:last-child div#tag-6 { /*225*/
+#wall .parent #tag-6 { 
   display: none;
 }
 
 
-body div#wall div.parent div > div#tag-7.slick { /*225*/
+body div#wall div.parent div > div#tag-7.slick {
   display: none;
+}
