--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -24,11 +24,10 @@ body #wall #tag-2 {
 }
 
 
-#wall .parent :last-child #tag-6 { 
+#wall .parent #tag-6 { 
   display: none;
 }
 
-
-body div#wall div.parent div > div#tag-7.slick {
+#wall .parent > #tag-7.slick {
   display: none;
 }
